// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440004"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base hasIconAndLabel work secondary fullWidth"
      id="123e4567-e89b-12d3-a456-426655440003"
      type="button"
    >
      <svg
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        data-testid="more"
        viewBox="0 0 720 720"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M120.118 358.241c0-33.171 26.889-60.058 60.058-60.058s60.058 26.888 60.058 60.058c0 33.171-26.889 60.058-60.058 60.058s-60.058-26.888-60.058-60.058zM300.293 358.241c0-33.171 26.888-60.058 60.058-60.058s60.058 26.888 60.058 60.058c0 33.171-26.888 60.058-60.058 60.058s-60.058-26.888-60.058-60.058zM540.528 298.182c-33.171 0-60.058 26.888-60.058 60.058s26.888 60.058 60.058 60.058c33.171 0 60.058-26.888 60.058-60.058s-26.888-60.058-60.058-60.058z"
        />
      </svg>
      <span
        class="base extraBold base base"
      >
        More Actions
      </span>
    </button>
  </div>
</div>
`;

exports[`Menu with custom activator renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440040"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base work primary"
      id="123e4567-e89b-12d3-a456-426655440039"
      type="button"
    >
      <span
        class="base extraBold base base"
      >
        Menu
      </span>
    </button>
  </div>
</div>
`;
